@@ -22,6 +22,7 @@ Compilers:
   CFI support for OS X.
 
 Bug fixes:
+- PR#4887: input_char after close_in crashes ocaml (msvc runtime)
 - PR#4762: ?? is not used at all, but registered as a lexer token
 - PR#4994: ocaml-mode doesn't work with xemacs21
 * PR#5119: camlp4 now raises a specific exception when 'DELETE_RULE' fails,
